--- a/fe/index.html
+++ b/fe/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
 	<head>
 		<meta charset="UTF-8" />
-		<link rel="icon" type="image/svg+xml" href="Yuumi.png" />
+		<link rel="icon" type="image/svg+xml" href="./public//Yuumi.png" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<title>wpoc</title>
+		<title>GUIDE POC</title>
 	</head>
 	<body>
 		<div id="root"></div>
