--- a/fe/index.html
+++ b/fe/index.html
@@ -4,7 +4,7 @@
 		<meta charset="UTF-8" />
 		<link rel="icon" type="image/svg+xml" href="Yuumi.png" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<title>GUIDE POC</title>
+		<title>POC GUIDE</title>
 	</head>
 	<body>
 		<div id="root"></div>
