commit linh tinh :d

--- a/fe/index.html
+++ b/fe/index.html
@@ -4,6 +4,12 @@
 		<meta charset="UTF-8" />
 		<link rel="icon" type="image/svg+xml" href="Yuumi.png" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<meta
+			name="description"
+			content="Hướng dẫn Path of Champions - Build tướng tối ưu"
+		/>
+
+		/>
 		<title>POC GUIDE</title>
 	</head>
 	<body>
